# beattrack

./: .gitignore  CLAUDE.md  PLAN.md  PLAN2.0.md  PLAN3.0.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
apps/api/: .env.example  .gitignore  Dockerfile  pyproject.toml
apps/api/app/: db.py  limiter.py  main.py
apps/api/app/routes/: analyze.py  batch_ingest.py  feedback.py  identify.py  similar.py  songs.py
apps/api/app/services/: __init__.py  acoustid.py  apple_music.py  deezer.py  features.py  genre.py  ingest.py  musicbrainz.py  soundcloud.py  spotify.py  validation.py  youtube.py
apps/api/app/workers/: __init__.py  extract.py  mert.py
apps/api/scripts/: analyze_embeddings.py  backfill_deezer_id.py  backfill_genre.py  cleanup_genres.py  compute_stats.py  eval_mert.py  extract_mert_batch.py  feed_batch_ingest.py  import_features.py  seed_deezer.py  seed_fma.py  seed_jamendo.py
apps/api/tests/: conftest.py  test_acoustid.py  test_analyze.py  test_cleanup.py  test_features.py  test_feedback_stats.py  test_musicbrainz.py  test_routes.py  test_similarity_logic.py  test_songs_features.py  test_soundcloud.py  test_spotify.py  test_validation.py  test_youtube.py
apps/web/: next.config.ts  package.json  vercel.json  vitest.config.ts
docs/: scaling-plan.md
phase0/: evaluate_similarity.py  extract.py  generate_test_audio.py  inspect_keys.py  main.py  pyproject.toml
scripts/: import_fma.py
supabase/migrations/: 001_init.sql  002_config.sql  003_feedback.sql  004_similarity_function.sql  005_procrastinate.sql  (+17 more)
(+55 files in other folders)
