[project]
name = "beattrack-api"
version = "0.1.0"
description = "Beattrack API — sonically similar song finder"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "supabase>=2.0.0",
    "python-magic>=0.4.27",
    "slowapi>=0.1.9",
    "procrastinate[asyncio]>=2.0.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.20",
    "numpy>=1.26.0",
    "essentia>=2.1b6.dev1110",
    "essentia-tensorflow>=2.1b6.dev1110",
    "pyacoustid>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (skipped unless essentia is installed)",
]
